# testPandaX4T

./: CMakeLists.txt  NR_energy2PE  README.md  Untitled.ipynb  ana_leakage_ratio.ipynb  calc_density.cpp  calc_driftvelocity.cpp  main.C  perPE2perkeV.ipynb  plotter.cpp  readme.txt  recomb_test.C  testPandaX4T.root  xenon1t.txt
include/: Detector.h  calc.h  signal.h
plots/: ana_PandaXcode.ipynb  ana_contour.ipynb  ana_leakage_ratio.ipynb  dataSpectrum.root  leakage ratio plot.ipynb  rates plots.ipynb  s2_plotter.C
plots/.ipynb_checkpoints/: PandaXcode_ana-checkpoint.ipynb  ana_PandaXcode-checkpoint.ipynb  ana_leakage_ratio-checkpoint.ipynb  leakage ratio plot-checkpoint.ipynb  leakage ratio plot_old_way-checkpoint.ipynb  rates plots-checkpoint.ipynb  rates-checkpoint.ipynb  rates_1-checkpoint.ipynb  rates_2-checkpoint.ipynb
src/: Detector.C  calc.C  signal.C
